--- a/css/styles.css
+++ b/css/styles.css
@@ -134,6 +134,10 @@ h5 {
         margin: auto;
         filter:invert(50%);
     }
+    @media (max-width: 650px) {
+        width: 48px;
+        height: 48px;
+    }
 }
 
 #btnVolverArriba:hover {
