--- a/css/inicio.css
+++ b/css/inicio.css
@@ -14,10 +14,8 @@ section.inicio {
         height: 100vh;
         grid-area: menu;
         color: var(--azul_oscuro);
-        justify-self: center;
         font-size: 1.1em;
         display: grid;
-        justify-content: center;
         letter-spacing: .4px;
         text-align: center;
         align-items: center;
@@ -39,15 +37,17 @@ section.inicio {
             position: absolute;
             top: 45px;
             right: 30px;
+            background-color: var(--azul_claro)
         }
         ul {
             background-color: var(--verde_claro_tenue);
             box-shadow: -5px 5px 5px rgba(0, 0, 0, .6);
-            border-start-start-radius: 15px;
-            border-end-end-radius: 15px;
+            border-radius: 16px 0;
+            border: 3px outset var(--verde_claro);
 
             b {
                 width: 100%;
+                height: 50px;
                 display: block;
                 background-color: var(--azul_oscuro);
                 color: var(--blanco);
@@ -56,19 +56,22 @@ section.inicio {
                 border-start-start-radius: 15px;
                 padding-top: 5px;
                 padding-bottom: 3px;
+                align-content: center;
             }
             li {
-                font-family: 'Lucida Sans';
-                padding: 0 10px;
-                /* border-bottom: 1px solid var(--blanco); */
+                text-align: right;
+                border-bottom: 1px solid var(--blanco);
+                border-right: 2px ridge var(--verde_claro);
+                border-left: 2px ridge var(--verde_claro);
                 align-items: center;
                 padding: 15px 20px;
                 cursor: pointer;
                 list-style: none;
-                font-weight: 500;
+                font-weight: 600;
+                display: block;
                 
                 &:last-child{
-                    /* border-bottom: 0px solid var(--blanco); */
+                    border-bottom: 0px solid var(--blanco);
                 }
                 a {
                     text-align: center;
@@ -76,13 +79,11 @@ section.inicio {
                     color: var(--azul_oscuro);
                     display: block;
                     font-size: 1.1rem;
-                    &:hover{
-                        color: var(--blanco);
-                    }
                 }
                 &:hover {
                     background-color: var(--azul_claro);
-                    transform: scale(103%);
+                    transform: scale(97%);
+                    border-radius: 16px 0;
                 }
             }
         }
@@ -102,13 +103,13 @@ section.inicio {
         border-start-start-radius: 70px;
         border-end-end-radius: 70px;
         box-shadow: -10px 10px 10px rgba(0, 0, 0, 0.6);
+        line-height: 2em;
 
         .logo {
             width: 80px;
             height: 70px;
             border: .8px outset #135869;
-            border-top-left-radius: 20px;
-            border-bottom-right-radius: 20px;
+            border-radius: 20px 0 20px;
             background-color: var(--blanco);
             padding-top: 1px;
             box-shadow: -5px 5px 5px rgba(0, 0, 0, 0.6);
@@ -124,8 +125,8 @@ section.inicio {
                 text-shadow: -5px 5px 5px rgba(69, 111, 239, 0.7);
             }
             h3 {
-                font-size: 1.1em;
-                margin-bottom: 15px;
+                font-size: 1.4em;
+                margin: 0 1em 1.5em;
 
                 a {
                     text-decoration: underline;
@@ -136,7 +137,7 @@ section.inicio {
         }
         .copyRight {
             line-height: 1;
-            font-size: 11px;
+            font-size: .85em;
             padding: 0 15px 10px;
             padding-bottom: 10px
         }
@@ -154,7 +155,6 @@ section.inicio {
             width: 150px;
             height: 50px;
             background-color: var(--verde_claro);
-            font-family: 'Roboto', sans-serif;
             font-size: 18px;
             font-weight: bold;
             border: 3px outset var(--verde_claro);
@@ -232,7 +232,6 @@ section.inicio {
 @media (max-width: 1000px) {
     section.inicio {
         width: 100%;
-        height: auto;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr auto 1fr;
         grid-template-areas:
@@ -245,7 +244,7 @@ section.inicio {
         nav {
             width: 100vw;
             height: 70px;
-            font-size: 14px;
+            font-size: 16px;
             margin: 0px;
             z-index: 21;
             
@@ -282,10 +281,10 @@ section.inicio {
             ul {
                 position: fixed;
                 width: 100vw;
-                height: 82vh;
-                background-color: var(--azul_oscuro);
+                height: 90vh;
+                background-color: var(--azul_medio);
                 top: 70px;
-                right: -110vw;
+                right: -105vw;
                 text-align: center;
                 transition: all .7s;
                 justify-content: center;
@@ -297,20 +296,24 @@ section.inicio {
                 li {
                     display: grid;
                     margin: 5px auto;
-                    /* border-bottom: 1px solid var(--azul_claro); */
+                    border-bottom: 0;
+                    border-right: 0px ridge var(--verde_claro);
+                    border-left: 0px ridge var(--verde_claro);
                     letter-spacing: 2px;
 
                     a {
                         cursor: pointer;
-                        font-size: 1.4em;
+                        font-size: 1.2em;
                         display: grid;
                         align-content: space-around;
                         color: var(--blanco);
                         padding: 0;
-                    }
-                    &:hover {
-                        background-color: var(--azul_tenue);
-                        color: var(--azul_oscuro);
+                        &:hover {
+                            background-color: var(--azul_claro);
+                            transform: scale(98%);
+                            border-radius: 4px 0; 
+                            border: 0px;
+                        }
                     }
                 }
             }
