Abrevié Text de sección 'Quiénes somos'

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,7 @@
     --semiTransparente: #fbfdfd22;
     --negro: #141414;
     --purpura: #9e06d5;
+    --naranja: #e08805;
 }
 html{
     scroll-behavior: smooth;
