--- a/css/inicio.css
+++ b/css/inicio.css
@@ -100,8 +100,7 @@ section.inicio {
         margin: 20px auto;
         text-align: center;
         padding: 0 9px;
-        border-start-start-radius: 70px;
-        border-end-end-radius: 70px;
+        border-radius: 70px 0 70px;
         box-shadow: -10px 10px 10px rgba(0, 0, 0, 0.6);
         line-height: 2em;
 
@@ -113,7 +112,6 @@ section.inicio {
             background-color: var(--blanco);
             padding-top: 1px;
             box-shadow: -5px 5px 5px rgba(0, 0, 0, 0.6);
-            transition: transform 0.3s ease-in-out infinite;
             animation: shake 2s  infinite;
         }
         div {
@@ -212,16 +210,7 @@ section.inicio {
     0% {
         transform: rotate(8deg);
     }
-    25% {
-        transform: rotate(-8deg);
-    }
-    30% {
-        transform: rotate(0deg);
-    }
     50% {
-        transform: rotate(0deg);
-    }
-    75% {
         transform: rotate(-8deg);
     }
     100% {
