Corrección de Vista de Ejemplos

--- a/css/libreria.css
+++ b/css/libreria.css
@@ -195,6 +195,7 @@ section.libreria {
 
         #ej-contenedor{
             display: flex;
+            flex-direction: row;
             align-items: flex-start;
             justify-content: center;
         }
