--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ html{
 }
 
 body {
-    font-family: 'Roboto', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Roboto', 'Lucida Sans', Arial, sans-serif;
 }
 
 section {
