--- a/css/libreria.css
+++ b/css/libreria.css
@@ -178,6 +178,9 @@ section.libreria {
             box-shadow: -2px 2px 2px rgba(0, 0, 0, .3);
             border: 3px ridge var(--gris_oscuro);
             z-index: 1;
+            display: flex;
+            align-items: center;
+            gap: 5px;
 
             img {
                 filter: invert(100%);
@@ -194,17 +197,15 @@ section.libreria {
         }
 
         #ej-contenedor{
-            display: flex;
-            flex-direction: row;
-            align-items: flex-start;
-            justify-content: center;
+            display: block;
+            margin: auto;
         }
     }
 }
 
 .codigo{
-    width: fit-content;
-    background-color: #1e1d1d;
+    /* width: fit-content; */
+    background-color: transparent;
 }
 
 @media (max-width: 1000px) {
