eliminé sección colaborar, modifiqué colores de fondos y cambié los colores de la función colorear

--- a/css/quienesSomos.css
+++ b/css/quienesSomos.css
@@ -1,7 +1,7 @@
 section.quienesSomos {
     width: 100%;
     height: auto;
-    background-color: var(--verde_claro);
+    background-color: var(--azul_claro);
     text-align: center;
     padding: 20px;
     padding-bottom: 50px;
