--- a/css/websDeInteres.css
+++ b/css/websDeInteres.css
@@ -2,7 +2,7 @@ section.websDeInteres {
     height: auto;
     min-height: 100vh;
     width: 100%;
-    background-color: var(--azul_tenue);
+    background-color: var(--verde_claro_tenue);
     padding: 20px;
     padding-bottom: 80px;
     display: block;
