--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@
     --semiTransparente: #fbfdfd22;
     --negro: #141414;
     --purpura: #9e06d5;
-    --naranja: #e08805;
+    --naranja: #db9405;
 }
 html{
     scroll-behavior: smooth;
@@ -89,9 +89,6 @@ h5 {
     margin-bottom: 10px;
     color: var(--blanco);
 }
-
-
-
 
 /* botón volver arriba */
 #btnVolverArriba {
