agregamos json webs interes

--- a/css/websDeInteres.css
+++ b/css/websDeInteres.css
@@ -13,7 +13,7 @@ section.websDeInteres {
         max-width: 700px;
         margin: auto;
         margin-top: 5px;
-        background-color: var(--verde_agua);
+        background-color: var(--azul_tenue);
         padding: 10px 0;
         filter: brightness(93%);
         border-radius: 5px;
