anterior a los cambios de LIO

--- a/css/libreria.css
+++ b/css/libreria.css
@@ -104,10 +104,11 @@ section.libreria {
                     }
 
                     &:active {
-                        color: var(--azul_oscuro);
+                        color: crimson;
                         background-color: rgba(255, 255, 255, 0.5);
                         padding: 6px;
                     }
+                    
                 }
             }
         }
