--- a/css/inicio.css
+++ b/css/inicio.css
@@ -79,6 +79,9 @@ section.inicio {
                     color: var(--azul_oscuro);
                     display: block;
                     font-size: 1.1rem;
+                    &:active {
+                        color: red;
+                    }
                 }
                 &:hover {
                     background-color: var(--azul_claro);
