--- a/css/quienesSomos.css
+++ b/css/quienesSomos.css
@@ -24,14 +24,14 @@ section.quienesSomos {
 
     h2 {
         max-width: 800px;
-        margin: 0px auto 15px;
+        margin: 12px auto 15px;
         text-shadow: -1.5px 1.5px 2px rgba(255, 255, 255, 0.893);
     }
     p {
         max-width: 1000px;
         margin: auto;
-        margin-bottom: 5px;
-        font-size: 1.1em;
+        margin-bottom: 1px;
+        font-size: 1.2em;
         text-align: left;
         padding: 0px 20px;
     }
@@ -48,11 +48,11 @@ section.quienesSomos {
     
     i {
         text-align: center;
-        font-size: 1.05em;
+        font-size: 1.2em;
         font-weight: bold;
     }
     i span {
-        color: var(--naranja);
+        color: var(--blanco);
         font-size: 1.2em;
     }
 }
