--- a/css/styles.css
+++ b/css/styles.css
@@ -68,16 +68,24 @@ h5 {
     margin-bottom: 40px;
     font-size: 16px;
     text-decoration: underline;
+    text-underline-offset: 3px;
+    color: white;
 
-    img {
-        width: 14px;
-        height: 14px;
-        margin-right: 5px;
-        margin-top: 20px;
+    a{
+        color: white;
+        img {
+            width: 14px;
+            height: 14px;
+            margin-right: 7px;
+            filter: invert(1);
+
+        }
     }
 
+    
+
     a:hover, a:active {
-        color: var(--azul_oscuro);
+        color: black;
         transform: scale(90%);
     }
 }
